# ProjektZespolowy

./: .gitignore  .gitmodules
ImgDetect/: CMakeLists.txt  cvutils.cpp  cvutils.h  imgdetector.cpp  imgdetector.h  main.cpp  mainwidget.cpp  mainwidget.h  mainwidget.ui  videocapture.cpp  videocapture.h
sprawozdanie/: ImgDetect.odp
